fixing journal list in the front page(fonts+spacing)

--- a/themes/inhabitenttheme/sass/_forms.scss
+++ b/themes/inhabitenttheme/sass/_forms.scss
@@ -91,6 +91,7 @@ a:visited {
 }
 .black-btn {
 	border: 1px solid black;
+	font-family: 'novecento',sans-serif;
 	color: black;
 	font-size: .9rem;
 	text-transform: uppercase;
