--- a/themes/inhabitenttheme/sass/_page-templates.scss
+++ b/themes/inhabitenttheme/sass/_page-templates.scss
@@ -111,6 +111,7 @@ h3 {
 }
 }
 h3.entry-title {
+  margin-top: 0;
 a{
   font-family: 'merriweather', sans-serif;
   color:white;
@@ -152,18 +153,18 @@ background-color: #e1e1e1;
 }}
 span.meta {
   font-size: .75rem;
-  font-family: 'merriweather';
+  font-family: 'merriweather',serif;
   color:#404040;
   font-weight: 200;
 }
 .journal-info-wrapper h3 a{
   color:#248a83;
-  font-family: 'novecento';
+  font-family: 'novecento',sans-serif;
 text-transform: uppercase;
 font-size: 1.3rem;
 font-weight: bold;
 &:hover {
-  color: #175450;
+  color: black;
 }
 }
 .journal-info-wrapper {
