--- a/themes/inhabitenttheme/style.css
+++ b/themes/inhabitenttheme/style.css
@@ -480,6 +480,7 @@ a:visited {
 
 .black-btn {
   border: 1px solid black;
+  font-family: 'novecento',sans-serif;
   color: black;
   font-size: .9rem;
   text-transform: uppercase;
@@ -1104,13 +1105,15 @@ ul {
   .story-info h3 {
     font-weight: 400; }
 
-h3.entry-title a {
-  font-family: 'merriweather', sans-serif;
-  color: white;
-  text-decoration: none;
-  cursor: pointer;
-  font-size: 1.75rem;
-  font-weight: 400; }
+h3.entry-title {
+  margin-top: 0; }
+  h3.entry-title a {
+    font-family: 'merriweather', sans-serif;
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 1.75rem;
+    font-weight: 400; }
 
 h2 {
   font-size: 2.4rem;
@@ -1143,18 +1146,18 @@ h2 {
 
 span.meta {
   font-size: .75rem;
-  font-family: 'merriweather';
+  font-family: 'merriweather',serif;
   color: #404040;
   font-weight: 200; }
 
 .journal-info-wrapper h3 a {
   color: #248a83;
-  font-family: 'novecento';
+  font-family: 'novecento',sans-serif;
   text-transform: uppercase;
   font-size: 1.3rem;
   font-weight: bold; }
   .journal-info-wrapper h3 a:hover {
-    color: #175450; }
+    color: black; }
 
 .journal-info-wrapper {
   padding: .8rem; }
